[package]
name = "lash"
version = "0.3.1"
edition = "2021"
description = "Interactive shell for lambda expressions"
readme = "README.md"
repository = "https://github.com/jzbor/lash"
license = "MIT"

[lib]
name = "lash_core"
path = "src/lib.rs"

[[bin]]
name = "lash"
path = "src/main.rs"

[dependencies]
rustyline = "10.0.0"
nom = { version = "7", default-features = false, features = ["alloc"] }
nom_locate = { version = "4.0.0", default-features = false, features = ["alloc"] }
clap = { version = "4.3.11", features = ["derive"] }
colored = "2.0.4"
humantime = "2.1.0"
