[package]
name = "lash"
version = "0.3.1"
edition = "2021"
description = "Interactive shell for lambda expressions"
readme = "README.md"
repository = "https://github.com/jzbor/lash"
license = "MIT"

[lib]
name = "lash_core"
path = "src/lib.rs"

[[bin]]
name = "lash"
path = "src/main.rs"

[dependencies]
rustyline = { version = "10.0.0", optional = true }
nom = { version = "7", default-features = false, features = ["alloc"] }
nom_locate = { version = "4.0.0", default-features = false, features = ["alloc"] }
clap = { version = "4.3.11", features = ["derive"], optional = true }
colored = { version = "2.0.4", optional = true }
humantime = { version = "2.1.0", optional = true }

[features]
default = ["std"]
std = [ "rustyline", "clap", "colored", "humantime" ]
