[package]
name = "lash"
version = "0.3.1"
edition = "2021"
description = "Interactive shell for lambda expressions"
readme = "README.md"
repository = "https://github.com/jzbor/lash"
license = "MIT"

[lib]
name = "lash_core"
path = "src/lib.rs"

[[bin]]
name = "lash"
path = "src/main.rs"

[dependencies]
rustyline = { version = "10.0.0", optional = true }
clap = { version = "4.3.11", features = ["derive"], optional = true }
colored = { version = "2.0.4", optional = true }
humantime = { version = "2.1.0", optional = true }
pest = { version = "2.7.14", features = [], default-features = false }
pest_derive = { version = "2.7.14", features = [], default-features = false }

[features]
default = ["std"]
std = [ "rustyline", "clap", "colored", "humantime", "pest/std", "pest_derive/std" ]
